open source edit

--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -185,6 +185,16 @@
             </div>
           </div>
 
+          <div class="card bg-success text-white mt-3">
+            <div class="card-header bg-success text-white">
+              Why are we open source?
+            </div>
+            <div class="card-body bg-dark text-white">
+              <h5 class="card-title bg-dark text-white"></h5>
+              <p class="card-text">Having open software leads to trust, community response to issues and constant pressure upon everyone involved to be honest. This site will always be open source, and we will continue to promote open source software. Feel free to check it out on <a href="https://github.com/corie-lc/collectorsboard">Github: CollectorsBoard.live</a></p>
+            </div>
+          </div>
+
             <div class="card bg-dark text-white mt-3">
             <div class="card-header bg-dark text-white">
               Policy For Password Reset (Forgot Password)
