about info design

--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -102,7 +102,7 @@
 <div class="card bg-dark text-white mt-3">
 
   
-
+  <div class="card bg-dark text-white mt-3">
   <div class="card-header bg-danger text-white mt-3 mb-3">
     Support Request
   </div>
@@ -133,8 +133,8 @@
 
           
 
-          <div class="card bg-dark text-white mt-3">
-            <div class="card-header bg-success text-white">
+        <div class="card bg-success text-white mt-3">
+          <div class="card-header bg-success text-white">
               What We Do!
             </div>
             <div class="card-body bg-dark text-white">
@@ -175,8 +175,8 @@
             <hr/>
 
 
-          <div class="card bg-dark text-white mt-3">
-            <div class="card-header bg-success text-white">
+            <div class="card bg-success text-white mt-3">
+              <div class="card-header bg-success text-white">
               Support & Note From Developer
             </div>
             <div class="card-body bg-dark text-white">
@@ -195,8 +195,8 @@
             </div>
           </div>
 
-            <div class="card bg-dark text-white mt-3">
-            <div class="card-header bg-dark text-white">
+          <div class="card bg-danger text-white mt-3">
+            <div class="card-header bg-danger text-white">
               Policy For Password Reset (Forgot Password)
             </div>
             <div class="card-body bg-dark text-white">
