--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -222,6 +222,22 @@
             </div>
           </div>
 
+          <div class="card bg-success text-white mt-3">
+            <div class="card-header bg-success text-white">
+              Our Partners
+            </div>
+            <div class="card-body bg-dark text-white">
+              <h5 class="card-title bg-dark text-white"></h5>
+              <p1 class="text-start"><em>Our Current Partners For Total Transparency.</em></p1>
+              <ul class="list-style text-start">
+                  <li>For all advertisments you see, they are sourced from <a href="https://adsterra.com/">Adsterra</a></li>
+                  <li>For all market value, we use <a href="https://www.countdownapi.com/">Countdown API</a> along with our own math you can find on our github page.</li>
+                  <li>For database hosting, we use <a href="https://www.digitalocean.com/">Digital Ocean</a>.</li>
+                  <li>For website hosting, we use <a href="https://www.name.com/">Name.com</a>.</li>
+                  <li>For emails, we use <a href="https://www.mailgun.com/">Mailgun.com</a>.</li>
+              </ul>            </div>
+          </div>
+
         </div>
       </div>
 
