--- a/templates/a.html
+++ b/templates/a.html
@@ -207,7 +207,7 @@
                         
                     <button id="observer" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                        Loading
+                        Looking around
                     </button>
 
           </div>
@@ -235,7 +235,7 @@
 
                     <button id="observer_top_posts" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                             <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                            Loading
+                            Looking around
                     </button>
           </div>
         </div>
@@ -250,7 +250,7 @@
 
                     <button id="observer_collections_test" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                        Loading
+                        Looking around
                     </button>
           </div>
         </div>
@@ -274,9 +274,9 @@
                     </div>
                     
                 </div>
-              <button id="observer_community_posts_test" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
+              <button id="observer_community_posts" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                   <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                  Loading
+                  Looking around
               </button>
           </div>
         </div>
