cleaned up some print statements

--- a/templates/collectionview.html
+++ b/templates/collectionview.html
@@ -202,7 +202,7 @@
 
                   <button id="observer" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                     <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
-                    Loading
+                    Looking around
                   </button>
 
 
