--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     <script src="scrollingSystems.js" type="module"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
     <script src="{{ url_for('static',filename='bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js') }}"></script>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
+
 
 </head>
 
