--- a/templates/a.html
+++ b/templates/a.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CB | Home</title>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
+
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <!-- Google tag (gtag.js) -->
