--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -12,6 +12,8 @@
 </script>
 
     <meta charset='utf-8'>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
+
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CB | Support</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
