--- a/templates/collectionview_guest.html
+++ b/templates/collectionview_guest.html
@@ -14,6 +14,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CB | {{get_collection_byid(para1)[0]}}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
+
 
     
     <script src="https://code.jquery.com/jquery-3.5.1.js"
