--- a/templates/community.html
+++ b/templates/community.html
@@ -14,6 +14,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>CB | {{para1}}{{ community_name }}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
+
 
 
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
