--- a/templates/a.html
+++ b/templates/a.html
@@ -4,7 +4,7 @@
      
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | Home</title>
+    <title>CollectorsBoard | Home</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
 
     <meta name='viewport' content='width=device-width, initial-scale=1'>
