--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
 
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | Support</title>
+    <title>CollectorsBoard | About & Support</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="scrollingSystems.js" type="module"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
