--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | Login</title>
+    <title>CollectorsBoard | Login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <script src="scrollingSystems.js" type="module"></script>
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
