--- a/templates/privacypolicy.html
+++ b/templates/privacypolicy.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | Support</title>
+    <title>CollectorsBoard | Privacy</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
 
