--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | {{ para1 }}</title>
+    <title>CollectorsBoard | {{ para1 }}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
 
