--- a/templates/search_collection.html
+++ b/templates/search_collection.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>CB | {{get_collection_byid(para2)[0]}}</title>
+    <title>CollectorsBoard | {{get_collection_byid(para2)[0]}}</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
 
