fixed collection view on home

--- a/templates/a.html
+++ b/templates/a.html
@@ -250,7 +250,7 @@
                     <div id="collection_list">
                     </div>
 
-                    <button id="observer_collections_test" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
+                    <button id="observer_collections" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                         Looking around
                     </button>
