updated copy link w https://

--- a/templates/collectionview_guest.html
+++ b/templates/collectionview_guest.html
@@ -144,7 +144,7 @@
                         <div class="input-group-prepend">
                           <button id="copyButton" onclick="copyLink()" class="btn btn-outline-secondary bg-primary text-white" type="button">Copy Link</button>
                         </div>
-                        <input id="copylink_input" type="text" class="form-control bg-dark text-white" placeholder="collectorsboard.live/collectionview/{{para1}}" value="collectorsboard.live/collectionview/{{para1}}"aria-label="" aria-describedby="basic-addon1" disabled>
+                        <input id="copylink_input" type="text" class="form-control bg-dark text-white" placeholder="https://collectorsboard.live/collectionview/{{para1}}" value="collectorsboard.live/collectionview/{{para1}}"aria-label="" aria-describedby="basic-addon1" disabled>
                       </div>
                     
 
