added support for invoices and donations

--- a/templates/about_info.html
+++ b/templates/about_info.html
@@ -112,6 +112,7 @@
               <label for="exampleFormControlSelect bg-dark text-white1">Support Type</label>
               <select class="form-control bg-dark text-white" id="exampleFormControlSelect1">
                 <option>Community Suggestion</option>
+                <option>Invoice Request</option>
                 <option>Report a Bug</option>
                 <option>Account Help</option>
                 <option>Membership Inquiry</option>
@@ -131,6 +132,8 @@
 
             <button id="buttonSendEmail" type="reset" class="btn btn-danger mt-2 w-100 mt-3 mb-3" onclick="sendSupportEmail()" disabled>Send -></button>
         </div>
+
+        
 
 
           
@@ -175,6 +178,16 @@
         </div>
 
             <hr/>
+
+            <div class="card bg-info text-white mt-3">
+              <div class="card-header bg-info text-white">
+              Help support the project.
+            </div>
+            <div class="card-body bg-dark text-white">
+              <h5 class="card-title bg-dark text-white"></h5>
+              <p class="card-text">If you like what we're doing, feel free to <a href="https://www.paypal.com/donate/?hosted_button_id=QZYPTAWNV2HVC">donate</a> and support us.</p>
+            </div>
+          </div>
 
 
             <div class="card bg-success text-white mt-3">
