--- a/templates/membership.html
+++ b/templates/membership.html
@@ -75,13 +75,14 @@
 
         <div class="card bg-success text-white mt-3">
             <div class="card-header">
-              Temporary Adjustments to Free Package
+              Temporary Adjustments to Free Package / Need to upgrade?
             </div>
             <div class="card-body">
                 While all paid memberships are still under development, we are allowing unlimited posts, collections and a max of 40 auto-pricing for all new sign-ups. We will notify everyone when this ends.
-                (If you really enjoy the services, you can request adjustments to current package right away via our <a href="/about_info">support</a> form!)
+                (If you really enjoy the services, you can request an invoice to current package for 60% off right away via our <a href="/about_info">support</a> form!)
               </div>
           </div>
+
 
         <div class="card bg-dark text-white mt-3">
             <div class="card-header">
