--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
 
 
 
-          <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+          <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
             What is CollectorsBoard?
           </button>
         <div class="collapse" id="collapseExample">
