--- a/templates/index.html
+++ b/templates/index.html
@@ -67,10 +67,10 @@
 
 
 
-          <button class="btn btn-success show" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="true" aria-controls="collapseExample">
+          <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
             What is CollectorsBoard?
           </button>
-        <div class="collapse show" id="collapseExample" aria-expanded="true">
+        <div class="collapse" id="collapseExample">
           <div class="card card-body bg-dark text-white">
             <p class="text-start"><em><strong>Here at CollectorsBoard, we are out to provide a free and open tool to track, value and share your collectables. Want to show people your full collection quickly or get the total value of your entire collection? Try CollectorsBoard.live out!</strong></em></p>
 
