added support for pinned collections with membership services

--- a/templates/collectionview.html
+++ b/templates/collectionview.html
@@ -220,6 +220,14 @@
                     </div>
                 </div>
 
+
+                {% for post in get_pinned_posts(para1) %}
+
+                {% from 'macros.html' import post_block %}
+                {{ post_block(post, 1, collection_id=para1) }}
+
+                {%endfor%}
+
                
                   
                   </div>
@@ -271,6 +279,7 @@
   
   
           </script>
+
   
             
   
