--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
                 <li>Create item posts/entrys</li>
                 <li>Join and make posts within a category specific community.</li>
                 <li>Adding your items and other users items to your customizable collections</li>
+                <li>Pin posts to the top of your collections with a pinned tag!</li>
                 <li>Comment on, share, save items/collections</li>
                 <li>Create entrys/posts with current market value (beta).</li>
                 <li>Add tags such as where and when an item was made, a photo and the official name along with general details</li>
