--- a/templates/membership.html
+++ b/templates/membership.html
@@ -94,6 +94,7 @@
                 <li>Unlimited Auto Pricing</li>
                 <li>Unlimited collections</li>
                 <li>Unlimited posts</li>
+                <li>8 pinned posts per collection</li>
                 <li>Option of auto-updating prices and collection values at a recurring time, or a day.</li>
                 <li>Price tracking of entire collections(Can be set for recurring)</li>
                 <li>Early release for new features</li>
@@ -111,6 +112,7 @@
               <h5 class="card-title">What's included with the Collector Essentials Package?</h5>
               <ul>
                 <li>Max of 400 auto prices a month</li>
+                <li>5 pinned posts per collection</li>
                 <li>Unlimited collections</li>
                 <li>Unlimited posts</li>
                 <li>Price tracking of entire collections</li>
@@ -129,6 +131,7 @@
                 <li>Max of 40 auto prices a month</li>
                 <li>Max of 15 collections (Should be enough for a standard user).</li>
                 <li>Unlimited Posts</li>
+                <li>2 pinned posts per collection</li>
                 <li>Price tracking of entire collections</li>
               </ul>
               <button href="#" class="btn btn-primary" disabled>Get the Free Package</a>
