--- a/templates/collectionview_guest.html
+++ b/templates/collectionview_guest.html
@@ -227,8 +227,8 @@
 
                 {% for post in get_pinned_posts(para1) %}
 
-                {% from 'macros.html' import post_block %}
-                {{ post_block(post, 1, collection_id=para1) }}
+                {% from 'macros.html' import post_block_guest %}
+                {{ post_block_guest(post, 1, collection_id=para1) }}
 
                 {%endfor%}
 
