--- a/templates/macros.html
+++ b/templates/macros.html
@@ -670,7 +670,7 @@
 
 
 
-{% macro post_block_guest(post, post_type=0) %}
+{% macro post_block_guest(post, post_type=0, collection_id="0") %}
 
 
 
@@ -710,6 +710,10 @@
         {% set post_like = "like_post2_" + post[2] %}
         {% set post_like_counter = "like_post2_counter_" + post[2] %}
         {% set modal_name = "exampleModal2" %}
+    {% endif %}
+
+    {% if is_post_pinned_to_collection(collection_id, post[2]) == True %}
+      {% set post_pinned_to_collection = True %}
     {% endif %}
 
 
@@ -809,7 +813,10 @@
             <div style="overflow-x: scroll" class="text-nowrap  w-100 tags-wall" id="tags-c-{{ post[2] }}">
 
               
+              {% if post_pinned_to_collection == True %}
+              <span id="badge5-pinned-{{post[2]}}" class="badge bg-warning ms-3">Pinned</span>
 
+              {% endif %}
               {% if post[9] != "no data" %}
                 <span id="badge1-{{post[2]}}" class="badge bg-primary ms-3">{{post[9]}}</span>
                {% else %}
