--- a/templates/privacypolicy.html
+++ b/templates/privacypolicy.html
@@ -76,7 +76,27 @@
                 <h5 class="card-title bg-dark text-white">Privacy Policy</h5>
                 <p class="card-text">We only collect what YOU tell us. This could be in the form of emails, names, items you own, values, ect. We DO NOT sell or export any information. All data stays in our systems, and will not ever leave without this policy being updated. In summary, the data you give us stays with us, and never leaves. Please reach out to support with any questions.</p>
               </hr>
-              <p class="card-text">We do plan to continue to use Google Ad Sense on our site. Please look at the <a href="https://policies.google.com/privacy">Google Privacy Policy</a> site for more information. Please reach out to us with any questions.</p>
+
+              </div>
+            </div>
+
+            <div class="card bg-dark text-white mt-3">
+              <div class="card-header bg-dark text-white">
+                Our Terms of Use
+              </div>
+              <div class="card-body bg-dark text-white">
+                <h5 class="card-title bg-dark text-white">Terms of use</h5>
+                <p1 class="text-start"><em>If you violate any of these terms & conditions, we have the absolute right to remove your account and ban any further accounts that you might attempt to create. We function on a warning system but in certain circumstances, we will remove you right away with or without notice or reason to the individual.</em></p1>
+                <ul class="list-style text-start">
+                <li>Any derogatory or offensive language used throughout the entire platform is not allowed, including but not limited to posts, comments, tags, usernames, emails, ect.</li>
+                <li>Any abuse of any platform features is not allowed. This includes but is not limited to spamming posts, collections, api requests, comments, ect.</li>
+                <li>Attempting to gain memberships without payment through lies or manipulation is not allowed.</li>
+                <li>The abuse of any source code, ads or any other partner features we may work with is not allowed</li>
+                <li>Harrasment of ANYONE for ANY REASON is not allowed.</li>
+                <li>We will continue to update this as time goes on. By agreeing to this statement, you acknowledge that if we update this and send out an email regarding the updates, you must follow it</li>
+
+            </ul>
+              </hr>
 
               </div>
             </div>
