fixed user functions on viewuser

--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -79,7 +79,7 @@
 
               <div class="card bg-dark text-white mt-3">
                 <div class="card-body bg-dark text-white">
-                  This user does not exisdddt. {{para1}}
+                  This user does not exist.
                 </div>
               </div>
 
