--- a/templates/viewuser.html
+++ b/templates/viewuser.html
@@ -129,7 +129,7 @@
 
                                     <div  id="post_list">
                                     </div>
-                                    <button id="observer" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
+                                    <button id="observerViewUserUserPosts" class="btn btn-dark w-100 mt-4 mb-5" type="button" disabled>
                                         <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                                         Loading
                                     </button>
