--- a/templates/collectionview.html
+++ b/templates/collectionview.html
@@ -112,6 +112,8 @@
   {% from 'macros.html' import navbar_block %}
   {{ navbar_block() }}
 
+  {% set pinned_posts = get_pinned_posts(para1) %}
+
 
 
       
@@ -221,7 +223,7 @@
                 </div>
 
 
-                {% for post in get_pinned_posts(para1) %}
+                {% for post in pinned_posts %}
 
                 {% from 'macros.html' import post_block %}
                 {{ post_block(post, 1, collection_id=para1) }}
