beta tester alert

--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 
   <div class="card bg-danger text-white mb-3">
     <div class="card-header">
-      This site is still in beta, but we would love your support!
+      This site is still in beta, but we would love your support! Reach out to be an official beta tester for free membership options!!!
     </div>
     <div class="card-body">
       We are still in beta testing, but we would love your support. Feel free to reach out via our <a href="/about_info">support</a> form to request features, report a bug and just any comments in general. 
