--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
 
 
           <button class="btn btn-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            What is CollectorsBoard?
+            What is CollectorsBoard? A free digital tool and platform to collect, value, organize, share and embrace your collection! Learn more by clicking this button!
           </button>
         <div class="collapse" id="collapseExample">
           <div class="card card-body bg-dark text-white">
