--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1230,6 +1230,8 @@
           </style>
 
           <li><a class="mt-4 me-3 text-white logged-out-link" href="/index">Sign up/Login</a></li>
+          <li><a class="mt-4 me-3 text-white logged-out-link text-decoration-underline"  href="/landingpage">Overview</a></li>
+
               
           
           <li><a class="mt-4 me-3 text-white logged-out-link"  href="/about_info">About & Support</a></li>
