--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -77,7 +77,7 @@
         <a href="/index" class="btn text-white bg-primary mt-3 mb-4 w-100">Get Started Today. All New Sign Ups Get Free Membership Options! (Until 3/1/24)</a>
 
 
-        <div class="card border-primary bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem; height: 43rem;">
+        <div class="card border-primary bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem;">
             <div class="card-body">
               <h5 class="card-title">Create Your Own Collections</h5>
               <p class="card-text">Create collections to put your favorite items on display! Maybe you've got a Pokemon Deck, or maybe you've got this one set of coins you <em>looovve</em>. We want to see all you've got. Get started today!</em></p>
@@ -86,7 +86,7 @@
             </div>
           </div>
 
-          <div class="card border-success bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem; height: 43rem">
+          <div class="card border-success bg-dark me-4 mt-4 mb-4 text-white float-start" style="width: 34rem; ">
             <div class="card-body">
               <h5 class="card-title">Join A Community Today</h5>
               <p class="card-text">We know you love your stuff, and so will everyone else! Share your items and include all the details you want. Utilize the description tags too!</p>
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <div class="card border-danger bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem; height: 35rem">
+          <div class="card border-danger bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
             <div class="card-body">
               <h5 class="card-title">Get Updates From Your Followers, Communities & More!</h5>
               <p class="card-text">Get updates when something you care happens. Maybe someone commented on your lovely piece, or someone followed you. Find out!</p>
@@ -106,7 +106,7 @@
             </div>
           </div>
 
-          <div class="card border-warning bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem; height: 35rem">
+          <div class="card border-warning bg-dark me-4 mt-4 mb-4 text-white float-end" style="width: 34rem;">
             <div class="card-body">
               <h5 class="card-title">Search What You Love!</h5>
               <p class="card-text">Do you want to see other items? Great! Search until you find something you care about. Search for communities, search for posts, search for collections. Search away!</p>
